# mpb

./: .gitignore  CMakeLists.txt  README.md  com.gutierre69.mpb.yml  mbp.desktop  tocaE.kdev4
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  audioplayer.cpp  audioplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  style.qss  waveform.cpp  waveform.h
